# fosslight_binary_scanner

./: .bumpversion.cfg  .coveragerc  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  REUSE.toml  cli.py  cli.spec  install_tools.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: publish-release.yml  pull-request.yml  release-drafter-config.yml
.reuse/: dep5
LICENSES/: 3rd_party_licenses.txt  LicenseRef-3rd-party-licenses.txt  LicenseRef-3rd_party_licenses.txt
docs/: SETUP_DATABASE.md  fosslight_create.sql
hooks/: hook-fosslight_binary.py
src/fosslight_binary/: __init__.py  _binary.py  _binary_dao.py  _help.py  _jar_analysis.py  _simple_mode.py  binary_analysis.py  cli.py  install_cli.py  no_nvd.properties
tests/: file_format_test.py  initial_tox_test.py  test_fosslight_binary.py
